--- a/chameleon-light.css
+++ b/chameleon-light.css
@@ -5,7 +5,9 @@
  * and very simple to adjust to your preference. Accent colors, text colors, and background colors are all easily adjustable.
  *
  * By default, the theme use a teal colour that I happen to like. But you can change the accent everywhere simply by modifying
- * the variable called '--palette-accent-hue' to a different number between 0 and 359. Red is 0, for example.
+ * the variable called '--palette-accent-hue' to a different number between 0 and 359. These numbers represent the colors of an
+ * RGB color wheel. Red is 0, Orange is about 30, etc. (See https://en.wikipedia.org/wiki/Color_wheel) The default hue is 185,
+ * which is a lovely teal color.
  *
  * This is the light variant of the theme. There is also a dark variant.
  *
@@ -19,7 +21,7 @@
  * Sharing:
  *   These themes can also be used for any pages you share publicly from a server instance of Trilium. In order to use
  *   this CSS when sharing a page, take the following steps:
- *   1. Clone the 'Chameleon (Dark)' note you created somewhere under the page you shared. This is important because, for security reasons,
+ *   1. Clone the 'Chameleon (Light)' note you created somewhere under the page you shared. This is important because, for security reasons,
  *      Trilium requires that the CSS is also shared.
  *   2. Add a label to the theme note called '#shareHiddenFromTree', so that the theme itself doesn't show up in the shared content.
  *   3. Add the following label to the page you're sharing - the best way to do this is to click the + button on the
